--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,3 +15,11 @@
 // );
 
 // $spacer: 1rem;
+
+$fontGrey: #494949;
+$fontPink: #fb8fc7;
+$bgWhite: #fffdf6;
+$bgPink: #fff6f6;
+
+$fontComfortaa: "Comfortaa", cursive;
+$fontCinzelDecorative: "Cinzel Decorative", cursive;
