--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,8 +3,8 @@
 // to customize it as you may want.
 
 @import "variables";
-@import "./base";
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "./base";
 
 // Write your sass code here or import partials
 
@@ -222,13 +222,208 @@ button {
       }
     }
 
-    p {
+    .contentTitle,
+    .contentTitle-sub {
+      display: flex;
+      flex-direction: row;
+      align-items: end;
+    }
+
+    .contentTitle-sub {
+      p {
+        animation-name: titleAnimation;
+        animation-duration: 7s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite;
+        position: bottom;
+      }
+
+      p:nth-of-type(1) {
+        animation-delay: 0s;
+      }
+
+      p:nth-of-type(2) {
+        animation-delay: .1s;
+      }
+
+      p:nth-of-type(3) {
+        animation-delay: .2s;
+      }
+
+      p:nth-of-type(4) {
+        animation-delay: .3s;
+      }
+
+      p:nth-of-type(5) {
+        animation-delay: .4s;
+      }
+
+      p:nth-of-type(6) {
+        animation-delay: .5s;
+      }
+
+      p:nth-of-type(7) {
+        animation-delay: .6s;
+      }
+
+      p:nth-of-type(8) {
+        animation-delay: .7s;
+      }
+
+      p:nth-of-type(9) {
+        animation-delay: .8s;
+      }
+
+      p:nth-of-type(10) {
+        animation-delay: .9s;
+      }
+
+      p:nth-of-type(11) {
+        animation-delay: 1s;
+      }
+
+      p:nth-of-type(12) {
+        animation-delay: 1.1s;
+      }
+
+      p:nth-of-type(13) {
+        animation-delay: 1.2s;
+      }
+
+      @keyframes titleAnimation {
+        0% {
+          opacity: 0;
+        }
+
+        .5% {
+          color: #6d6d6d;
+        }
+
+        10% {
+          color: #606060;
+        }
+
+        20% {
+          color: #565656;
+        }
+
+        30% {
+          color: #4b4a4a;
+        }
+
+        35% {
+          color: #3b3b3b;
+        }
+
+        50% {
+          color: $fontGrey;
+        }
+
+        65% {
+          color: #3b3b3b;
+        }
+
+        70% {
+          color: #4b4a4a;
+        }
+
+        80% {
+          color: #565656;
+        }
+
+        90% {
+          color: #6d6d6d;
+        }
+
+        100% {
+          color: #b9b9b97b;
+        }
+      }
+
+    }
+
+    .titleSpace1 {
+      margin: 0 0.5rem;
+      vertical-align: middle;
+    }
+
+    .titleSpace2 {
       margin: 0 2rem;
-      font-size: 2.5rem;
       vertical-align: middle;
     }
   }
 }
+
+
+// .headerDesktop {
+//   display: none;
+//   flex-direction: column;
+//   width: 100%;
+//   height: 100vh;
+//   padding: 2rem;
+//   background-color: $bgPink;
+
+//   .headerNav {
+//     width: 100%;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+//   }
+
+//   h1 {
+//     font-family: $fontCinzelDecorative;
+//     font-size: 6rem;
+//     color: $fontGrey;
+//     white-space: nowrap;
+
+//     span {
+//       font-size: 8rem;
+//       color: $fontGrey;
+//       color: $fontPink;
+//       text-shadow: 5px 5px 4px $fontGrey;
+//     }
+//   }
+
+//   nav {
+//     a {
+//       font-size: 2.5rem;
+//       color: $fontGrey;
+
+//       text-decoration: none;
+//       padding-left: 0.5rem;
+
+//       &:hover {
+//         color: $fontPink;
+//         transition: color 2s ease;
+//       }
+//     }
+//   }
+
+//   .headerTitle {
+//     display: flex;
+//     width: 100%;
+//     height: 100vh;
+//     flex-direction: row;
+//     justify-content: center;
+//     align-items: center;
+
+//     h2 {
+//       font-size: 4rem;
+//       font-family: $fontCinzelDecorative;
+
+//       span {
+//         font-size: 6rem;
+//         color: $fontPink;
+//       }
+//     }
+
+//     p {
+//       margin: 0 2rem;
+//       font-size: 2.5rem;
+//       vertical-align: middle;
+//     }
+//   }
+// }
 
 section {
   padding: 5rem 2rem;
