--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -243,39 +243,39 @@ button {
       }
 
       p:nth-of-type(2) {
-        animation-delay: .1s;
+        animation-delay: 0.1s;
       }
 
       p:nth-of-type(3) {
-        animation-delay: .2s;
+        animation-delay: 0.2s;
       }
 
       p:nth-of-type(4) {
-        animation-delay: .3s;
+        animation-delay: 0.3s;
       }
 
       p:nth-of-type(5) {
-        animation-delay: .4s;
+        animation-delay: 0.4s;
       }
 
       p:nth-of-type(6) {
-        animation-delay: .5s;
+        animation-delay: 0.5s;
       }
 
       p:nth-of-type(7) {
-        animation-delay: .6s;
+        animation-delay: 0.6s;
       }
 
       p:nth-of-type(8) {
-        animation-delay: .7s;
+        animation-delay: 0.7s;
       }
 
       p:nth-of-type(9) {
-        animation-delay: .8s;
+        animation-delay: 0.8s;
       }
 
       p:nth-of-type(10) {
-        animation-delay: .9s;
+        animation-delay: 0.9s;
       }
 
       p:nth-of-type(11) {
@@ -339,7 +339,6 @@ button {
           color: #b9b9b97b;
         }
       }
-
     }
 
     .titleSpace1 {
@@ -353,7 +352,6 @@ button {
     }
   }
 }
-
 
 // .headerDesktop {
 //   display: none;
@@ -638,10 +636,20 @@ footer {
 }
 
 @media only screen and (max-width: 767px) {
-
   .headerTablet,
   .headerDesktop {
     display: none;
+  }
+
+  footer div:nth-of-type(2) {
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    p {
+      margin: 0;
+    }
   }
 }
 
@@ -653,6 +661,17 @@ footer {
   .headerMobile,
   .headerDesktop {
     display: none;
+  }
+
+  footer div:nth-of-type(2) {
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    p {
+      margin: 0;
+    }
   }
 }
 
