Modified footer padding-bottom

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -646,6 +646,7 @@ footer {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding-bottom: 4rem;
 
     p {
       margin: 0;
@@ -668,6 +669,7 @@ footer {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding-bottom: 4rem;
 
     p {
       margin: 0;
