--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -64,29 +64,230 @@ button {
   }
 
   .headerTitle {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    margin: 0 auto;
-    top: 40%;
-    left: 15%;
-
-    h2 {
-      width: 80vw;
-      font-size: 3.5rem;
-      font-family: $fontCinzelDecorative;
-
-      span {
-        font-size: 5rem;
-        color: $fontPink;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        margin: 0 auto;
+        top: 40%;
+        left: 15%;
+    
+        h2 {
+          width: 80vw;
+          font-size: 3.5rem;
+          font-family: $fontCinzelDecorative;
+    
+          span {
+            font-size: 5rem;
+            color: $fontPink;
+          }
+    
+          &:nth-of-type(2) {
+            margin-top: 1.5rem;
+          }
+        }
       }
 
-      &:nth-of-type(2) {
-        margin-top: 1.5rem;
+    .contentTitle,
+    .contentTitle-sub {
+      display: flex;
+      flex-direction: row;
+      align-items: end;
+    }
+
+    .contentTitle-sub {
+      p {
+        animation-name: titleAnimation;
+        animation-duration: 7s;
+        animation-timing-function: ease-in;
+        animation-iteration-count: infinite;
+        position: bottom;
+      }
+
+      p:nth-of-type(1) {
+        animation-delay: 0s;
+      }
+
+      p:nth-of-type(2) {
+        animation-delay: 0.1s;
+      }
+
+      p:nth-of-type(3) {
+        animation-delay: 0.2s;
+      }
+
+      p:nth-of-type(4) {
+        animation-delay: 0.3s;
+      }
+
+      p:nth-of-type(5) {
+        animation-delay: 0.4s;
+      }
+
+      p:nth-of-type(6) {
+        animation-delay: 0.5s;
+      }
+
+      p:nth-of-type(7) {
+        animation-delay: 0.6s;
+      }
+
+      p:nth-of-type(8) {
+        animation-delay: 0.7s;
+      }
+
+      p:nth-of-type(9) {
+        animation-delay: 0.8s;
+      }
+
+      p:nth-of-type(10) {
+        animation-delay: 0.9s;
+      }
+
+      p:nth-of-type(11) {
+        animation-delay: 1s;
+      }
+
+      p:nth-of-type(12) {
+        animation-delay: 1.1s;
+      }
+
+      p:nth-of-type(13) {
+        animation-delay: 1.2s;
+      }
+
+      @keyframes titleAnimation {
+        0% {
+          opacity: 0;
+        }
+
+        .5% {
+          color: #6d6d6d;
+        }
+
+        10% {
+          color: #606060;
+        }
+
+        20% {
+          color: #565656;
+        }
+
+        30% {
+          color: #4b4a4a;
+        }
+
+        35% {
+          color: #3b3b3b;
+        }
+
+        50% {
+          color: $fontGrey;
+        }
+
+        65% {
+          color: #3b3b3b;
+        }
+
+        70% {
+          color: #4b4a4a;
+        }
+
+        80% {
+          color: #565656;
+        }
+
+        90% {
+          color: #6d6d6d;
+        }
+
+        100% {
+          color: #b9b9b97b;
+        }
       }
     }
+
+    .titleSpace1 {
+      margin: 0 0.5rem;
+      vertical-align: middle;
+    }
+
+    .titleSpace2 {
+      margin: 0 2rem;
+      vertical-align: middle;
+    }
   }
-}
+
+// .headerMobile {
+//   display: flex;
+//   flex-direction: column;
+//   position: relative;
+
+//   width: 100%;
+//   height: 100vh;
+//   padding: 2rem;
+//   background-color: $bgPink;
+
+//   .headerNav {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+
+//     h1 {
+//       font-family: $fontCinzelDecorative;
+//       font-size: 4.5rem;
+//       color: $fontGrey;
+
+//       span {
+//         font-size: 7rem;
+//         color: $fontGrey;
+//         color: $fontPink;
+//         text-shadow: 5px 5px 4px $fontGrey;
+//       }
+//     }
+
+//     nav {
+//       display: flex;
+//       flex-direction: column;
+
+//       a {
+//         font-size: 2.5rem;
+//         color: $fontGrey;
+//         transition: color 1s ease;
+
+//         text-decoration: none;
+//         padding-left: 0.5rem;
+
+//         &:hover {
+//           color: $fontPink;
+//         }
+//       }
+//     }
+//   }
+
+//   .headerTitle {
+//     display: flex;
+//     flex-direction: column;
+//     position: absolute;
+//     margin: 0 auto;
+//     top: 40%;
+//     left: 15%;
+
+//     h2 {
+//       width: 80vw;
+//       font-size: 3.5rem;
+//       font-family: $fontCinzelDecorative;
+
+//       span {
+//         font-size: 5rem;
+//         color: $fontPink;
+//       }
+
+//       &:nth-of-type(2) {
+//         margin-top: 1.5rem;
+//       }
+//     }
+//   }
+// }
 
 .headerTablet {
   display: flex;
@@ -157,6 +358,134 @@ button {
         margin-top: 1.5rem;
       }
     }
+  }
+  .contentTitle,
+  .contentTitle-sub {
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+  }
+
+  .contentTitle-sub {
+    p {
+      animation-name: titleAnimation;
+      animation-duration: 7s;
+      animation-timing-function: ease-in;
+      animation-iteration-count: infinite;
+      position: bottom;
+    }
+
+    p:nth-of-type(1) {
+      animation-delay: 0s;
+    }
+
+    p:nth-of-type(2) {
+      animation-delay: 0.1s;
+    }
+
+    p:nth-of-type(3) {
+      animation-delay: 0.2s;
+    }
+
+    p:nth-of-type(4) {
+      animation-delay: 0.3s;
+    }
+
+    p:nth-of-type(5) {
+      animation-delay: 0.4s;
+    }
+
+    p:nth-of-type(6) {
+      animation-delay: 0.5s;
+    }
+
+    p:nth-of-type(7) {
+      animation-delay: 0.6s;
+    }
+
+    p:nth-of-type(8) {
+      animation-delay: 0.7s;
+    }
+
+    p:nth-of-type(9) {
+      animation-delay: 0.8s;
+    }
+
+    p:nth-of-type(10) {
+      animation-delay: 0.9s;
+    }
+
+    p:nth-of-type(11) {
+      animation-delay: 1s;
+    }
+
+    p:nth-of-type(12) {
+      animation-delay: 1.1s;
+    }
+
+    p:nth-of-type(13) {
+      animation-delay: 1.2s;
+    }
+
+    @keyframes titleAnimation {
+      0% {
+        opacity: 0;
+      }
+
+      .5% {
+        color: #6d6d6d;
+      }
+
+      10% {
+        color: #606060;
+      }
+
+      20% {
+        color: #565656;
+      }
+
+      30% {
+        color: #4b4a4a;
+      }
+
+      35% {
+        color: #3b3b3b;
+      }
+
+      50% {
+        color: $fontGrey;
+      }
+
+      65% {
+        color: #3b3b3b;
+      }
+
+      70% {
+        color: #4b4a4a;
+      }
+
+      80% {
+        color: #565656;
+      }
+
+      90% {
+        color: #6d6d6d;
+      }
+
+      100% {
+        color: #b9b9b97b;
+      }
+    }
+  }
+
+  .titleSpace1 {
+    margin: 0 0.5rem;
+    vertical-align: middle;
+  }
+
+  .titleSpace2 {
+    margin: 0 2rem;
+    vertical-align: middle;
   }
 }
 
@@ -591,7 +920,7 @@ button {
   flex-direction: column;
 }
 
-#contact,
+#contact a,
 footer {
   img:hover {
     transform: scale(1.15);
