--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,7 +16,8 @@ button {
   text-align: left;
 }
 
-.headerMobile {
+// Smart Phone
+.header {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -38,7 +39,6 @@ button {
 
       span {
         font-size: 7rem;
-        color: $fontGrey;
         color: $fontPink;
         text-shadow: 5px 5px 4px $fontGrey;
       }
@@ -51,286 +51,12 @@ button {
       a {
         font-size: 2.5rem;
         color: $fontGrey;
-        transition: color 1s ease;
-
         text-decoration: none;
         padding-left: 0.5rem;
 
         &:hover {
           color: $fontPink;
-        }
-      }
-    }
-  }
-
-  .headerTitle {
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        margin: 0 auto;
-        top: 40%;
-        left: 15%;
-    
-        h2 {
-          width: 80vw;
-          font-size: 3.5rem;
-          font-family: $fontCinzelDecorative;
-    
-          span {
-            font-size: 5rem;
-            color: $fontPink;
-          }
-    
-          &:nth-of-type(2) {
-            margin-top: 1.5rem;
-          }
-        }
-      }
-
-    .contentTitle,
-    .contentTitle-sub {
-      display: flex;
-      flex-direction: row;
-      align-items: end;
-    }
-
-    .contentTitle-sub {
-      p {
-        animation-name: titleAnimation;
-        animation-duration: 7s;
-        animation-timing-function: ease-in;
-        animation-iteration-count: infinite;
-        position: bottom;
-      }
-
-      p:nth-of-type(1) {
-        animation-delay: 0s;
-      }
-
-      p:nth-of-type(2) {
-        animation-delay: 0.1s;
-      }
-
-      p:nth-of-type(3) {
-        animation-delay: 0.2s;
-      }
-
-      p:nth-of-type(4) {
-        animation-delay: 0.3s;
-      }
-
-      p:nth-of-type(5) {
-        animation-delay: 0.4s;
-      }
-
-      p:nth-of-type(6) {
-        animation-delay: 0.5s;
-      }
-
-      p:nth-of-type(7) {
-        animation-delay: 0.6s;
-      }
-
-      p:nth-of-type(8) {
-        animation-delay: 0.7s;
-      }
-
-      p:nth-of-type(9) {
-        animation-delay: 0.8s;
-      }
-
-      p:nth-of-type(10) {
-        animation-delay: 0.9s;
-      }
-
-      p:nth-of-type(11) {
-        animation-delay: 1s;
-      }
-
-      p:nth-of-type(12) {
-        animation-delay: 1.1s;
-      }
-
-      p:nth-of-type(13) {
-        animation-delay: 1.2s;
-      }
-
-      @keyframes titleAnimation {
-        0% {
-          opacity: 0;
-        }
-
-        .5% {
-          color: #6d6d6d;
-        }
-
-        10% {
-          color: #606060;
-        }
-
-        20% {
-          color: #565656;
-        }
-
-        30% {
-          color: #4b4a4a;
-        }
-
-        35% {
-          color: #3b3b3b;
-        }
-
-        50% {
-          color: $fontGrey;
-        }
-
-        65% {
-          color: #3b3b3b;
-        }
-
-        70% {
-          color: #4b4a4a;
-        }
-
-        80% {
-          color: #565656;
-        }
-
-        90% {
-          color: #6d6d6d;
-        }
-
-        100% {
-          color: #b9b9b97b;
-        }
-      }
-    }
-
-    .titleSpace1 {
-      margin: 0 0.5rem;
-      vertical-align: middle;
-    }
-
-    .titleSpace2 {
-      margin: 0 2rem;
-      vertical-align: middle;
-    }
-  }
-
-// .headerMobile {
-//   display: flex;
-//   flex-direction: column;
-//   position: relative;
-
-//   width: 100%;
-//   height: 100vh;
-//   padding: 2rem;
-//   background-color: $bgPink;
-
-//   .headerNav {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
-
-//     h1 {
-//       font-family: $fontCinzelDecorative;
-//       font-size: 4.5rem;
-//       color: $fontGrey;
-
-//       span {
-//         font-size: 7rem;
-//         color: $fontGrey;
-//         color: $fontPink;
-//         text-shadow: 5px 5px 4px $fontGrey;
-//       }
-//     }
-
-//     nav {
-//       display: flex;
-//       flex-direction: column;
-
-//       a {
-//         font-size: 2.5rem;
-//         color: $fontGrey;
-//         transition: color 1s ease;
-
-//         text-decoration: none;
-//         padding-left: 0.5rem;
-
-//         &:hover {
-//           color: $fontPink;
-//         }
-//       }
-//     }
-//   }
-
-//   .headerTitle {
-//     display: flex;
-//     flex-direction: column;
-//     position: absolute;
-//     margin: 0 auto;
-//     top: 40%;
-//     left: 15%;
-
-//     h2 {
-//       width: 80vw;
-//       font-size: 3.5rem;
-//       font-family: $fontCinzelDecorative;
-
-//       span {
-//         font-size: 5rem;
-//         color: $fontPink;
-//       }
-
-//       &:nth-of-type(2) {
-//         margin-top: 1.5rem;
-//       }
-//     }
-//   }
-// }
-
-.headerTablet {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-
-  width: 100%;
-  height: 100vh;
-  padding: 2rem;
-  background-color: $bgPink;
-
-  .headerNav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    h1 {
-      font-family: $fontCinzelDecorative;
-      font-size: 4.5rem;
-      color: $fontGrey;
-
-      span {
-        font-size: 7rem;
-        color: $fontGrey;
-        color: $fontPink;
-        text-shadow: 5px 5px 4px $fontGrey;
-      }
-    }
-
-    nav {
-      display: flex;
-      flex-direction: column;
-
-      a {
-        font-size: 2.5rem;
-        color: $fontGrey;
-        transition: color 1s ease;
-
-        text-decoration: none;
-        padding-left: 0.5rem;
-
-        &:hover {
-          color: $fontPink;
+          transition: color 1s ease;
         }
       }
     }
@@ -342,10 +68,10 @@ button {
     position: absolute;
     margin: 0 auto;
     top: 40%;
-    left: 25%;
+    left: 15%;
 
     h2 {
-      width: 50vw;
+      width: 80vw;
       font-size: 3.5rem;
       font-family: $fontCinzelDecorative;
 
@@ -359,6 +85,7 @@ button {
       }
     }
   }
+
   .contentTitle,
   .contentTitle-sub {
     display: flex;
@@ -488,269 +215,6 @@ button {
     vertical-align: middle;
   }
 }
-
-.headerDesktop {
-  display: none;
-  flex-direction: column;
-  width: 100%;
-  height: 100vh;
-  padding: 2rem;
-  background-color: $bgPink;
-
-  .headerNav {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  h1 {
-    font-family: $fontCinzelDecorative;
-    font-size: 6rem;
-    color: $fontGrey;
-    white-space: nowrap;
-
-    span {
-      font-size: 8rem;
-      color: $fontGrey;
-      color: $fontPink;
-      text-shadow: 5px 5px 4px $fontGrey;
-    }
-  }
-
-  nav {
-    a {
-      font-size: 2.5rem;
-      color: $fontGrey;
-
-      text-decoration: none;
-      padding-left: 0.5rem;
-
-      &:hover {
-        color: $fontPink;
-        transition: color 2s ease;
-      }
-    }
-  }
-
-  .headerTitle {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-
-    h2 {
-      font-size: 4rem;
-      font-family: $fontCinzelDecorative;
-
-      span {
-        font-size: 6rem;
-        color: $fontPink;
-      }
-    }
-
-    .contentTitle,
-    .contentTitle-sub {
-      display: flex;
-      flex-direction: row;
-      align-items: end;
-    }
-
-    .contentTitle-sub {
-      p {
-        animation-name: titleAnimation;
-        animation-duration: 7s;
-        animation-timing-function: ease-in;
-        animation-iteration-count: infinite;
-        position: bottom;
-      }
-
-      p:nth-of-type(1) {
-        animation-delay: 0s;
-      }
-
-      p:nth-of-type(2) {
-        animation-delay: 0.1s;
-      }
-
-      p:nth-of-type(3) {
-        animation-delay: 0.2s;
-      }
-
-      p:nth-of-type(4) {
-        animation-delay: 0.3s;
-      }
-
-      p:nth-of-type(5) {
-        animation-delay: 0.4s;
-      }
-
-      p:nth-of-type(6) {
-        animation-delay: 0.5s;
-      }
-
-      p:nth-of-type(7) {
-        animation-delay: 0.6s;
-      }
-
-      p:nth-of-type(8) {
-        animation-delay: 0.7s;
-      }
-
-      p:nth-of-type(9) {
-        animation-delay: 0.8s;
-      }
-
-      p:nth-of-type(10) {
-        animation-delay: 0.9s;
-      }
-
-      p:nth-of-type(11) {
-        animation-delay: 1s;
-      }
-
-      p:nth-of-type(12) {
-        animation-delay: 1.1s;
-      }
-
-      p:nth-of-type(13) {
-        animation-delay: 1.2s;
-      }
-
-      @keyframes titleAnimation {
-        0% {
-          opacity: 0;
-        }
-
-        .5% {
-          color: #6d6d6d;
-        }
-
-        10% {
-          color: #606060;
-        }
-
-        20% {
-          color: #565656;
-        }
-
-        30% {
-          color: #4b4a4a;
-        }
-
-        35% {
-          color: #3b3b3b;
-        }
-
-        50% {
-          color: $fontGrey;
-        }
-
-        65% {
-          color: #3b3b3b;
-        }
-
-        70% {
-          color: #4b4a4a;
-        }
-
-        80% {
-          color: #565656;
-        }
-
-        90% {
-          color: #6d6d6d;
-        }
-
-        100% {
-          color: #b9b9b97b;
-        }
-      }
-    }
-
-    .titleSpace1 {
-      margin: 0 0.5rem;
-      vertical-align: middle;
-    }
-
-    .titleSpace2 {
-      margin: 0 2rem;
-      vertical-align: middle;
-    }
-  }
-}
-
-// .headerDesktop {
-//   display: none;
-//   flex-direction: column;
-//   width: 100%;
-//   height: 100vh;
-//   padding: 2rem;
-//   background-color: $bgPink;
-
-//   .headerNav {
-//     width: 100%;
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
-//   }
-
-//   h1 {
-//     font-family: $fontCinzelDecorative;
-//     font-size: 6rem;
-//     color: $fontGrey;
-//     white-space: nowrap;
-
-//     span {
-//       font-size: 8rem;
-//       color: $fontGrey;
-//       color: $fontPink;
-//       text-shadow: 5px 5px 4px $fontGrey;
-//     }
-//   }
-
-//   nav {
-//     a {
-//       font-size: 2.5rem;
-//       color: $fontGrey;
-
-//       text-decoration: none;
-//       padding-left: 0.5rem;
-
-//       &:hover {
-//         color: $fontPink;
-//         transition: color 2s ease;
-//       }
-//     }
-//   }
-
-//   .headerTitle {
-//     display: flex;
-//     width: 100%;
-//     height: 100vh;
-//     flex-direction: row;
-//     justify-content: center;
-//     align-items: center;
-
-//     h2 {
-//       font-size: 4rem;
-//       font-family: $fontCinzelDecorative;
-
-//       span {
-//         font-size: 6rem;
-//         color: $fontPink;
-//       }
-//     }
-
-//     p {
-//       margin: 0 2rem;
-//       font-size: 2.5rem;
-//       vertical-align: middle;
-//     }
-//   }
-// }
 
 section {
   padding: 5rem 2rem;
@@ -937,10 +401,15 @@ footer {
   }
 
   div:nth-of-type(2) {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     display: flex;
-    flex-direction: row;
-    justify-content: right;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 4rem;
+
+    p {
+      margin-bottom: 0;
+    }
   }
 
   a {
@@ -949,12 +418,8 @@ footer {
 
     &:hover {
       color: $fontPink;
-      transition: color 2s ease;
+      transition: color 1s ease;
     }
-  }
-
-  p {
-    margin: 0.8rem;
   }
 
   img {
@@ -964,56 +429,126 @@ footer {
   }
 }
 
-@media only screen and (max-width: 767px) {
-  .headerTablet,
-  .headerDesktop {
-    display: none;
-  }
+// Smaller Smart Phone
+@media only screen and (max-width: 575px) {
+  .header {
+    .headerNav {
+      h1 {
+        font-size: 3.6rem;
 
-  footer div:nth-of-type(2) {
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-bottom: 4rem;
+        span {
+          font-size: 5.6rem;
+        }
+      }
+    }
 
-    p {
-      margin: 0;
+    .headerTitle {
+      h2 {
+        font-size: 2.8rem;
+
+        span {
+          font-size: 4rem;
+        }
+      }
     }
   }
 }
 
+// Smart Phone
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+  footer {
+    div:nth-of-type(2) {
+      font-size: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding-bottom: 4rem;
+
+      p {
+        margin: 0;
+      }
+    }
+  }
+}
+
+// Tablet
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
-  .headerTablet {
-    display: flex;
-  }
+  .header {
+    .headerTitle {
+      left: 20%;
+      width: 50vw;
+    }
 
-  .headerMobile,
-  .headerDesktop {
-    display: none;
-  }
+    footer {
+      div:nth-of-type(2) {
+        font-size: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 0;
 
-  footer div:nth-of-type(2) {
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding-bottom: 4rem;
-
-    p {
-      margin: 0;
+        p {
+          margin: 0;
+        }
+      }
     }
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .headerDesktop {
-    display: flex;
-  }
+  .header {
+    position: static;
 
-  .headerMobile,
-  .headerTablet {
-    display: none;
+    .headerNav {
+      h1 {
+        font-size: 6rem;
+        white-space: nowrap;
+
+        span {
+          font-size: 8rem;
+        }
+      }
+
+      nav {
+        flex-direction: row;
+
+        a {
+          padding-left: 1.5rem;
+
+          &:hover {
+            transition: color 1s ease;
+          }
+        }
+      }
+    }
+
+    .headerTitle {
+      width: 35vw;
+      height: 100vh;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      position: static;
+
+      h2 {
+        font-size: 4rem;
+
+        span {
+          font-size: 6rem;
+        }
+
+        &:nth-of-type(2) {
+          margin-top: 0;
+        }
+      }
+
+      .contentTitle,
+      .contentTitle-sub {
+        display: flex;
+        flex-direction: row;
+        align-items: end;
+      }
+    }
   }
 
   section {
@@ -1023,5 +558,19 @@ footer {
   .contactForm {
     width: 50%;
     margin: 0 auto;
+  }
+
+  footer {
+    div:nth-of-type(2) {
+      font-size: 1.8rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: right;
+      padding-bottom: 0;
+    }
+
+    p {
+      margin: 0.8rem;
+    }
   }
 }
