--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,13 +47,11 @@ button {
     nav {
       display: flex;
       flex-direction: column;
-
       a {
         font-size: 2.5rem;
         color: $fontGrey;
         text-decoration: none;
         padding-left: 0.5rem;
-
         &:hover {
           color: $fontPink;
           transition: color 1s ease;
@@ -71,7 +69,6 @@ button {
     left: 15%;
 
     h2 {
-      width: 80vw;
       font-size: 3.5rem;
       font-family: $fontCinzelDecorative;
 
@@ -217,18 +214,13 @@ button {
 }
 
 section {
-  padding: 5rem 2rem;
+  padding: 5rem 5rem;
 }
 
 #about {
   img {
-    width: 30rem;
+    width: 25rem;
     margin-bottom: 1.5rem;
-  }
-
-  div,
-  p {
-    margin: 1rem 0 1rem 1.5rem;
   }
 }
 
@@ -245,7 +237,7 @@ h4 {
 }
 
 .recommendations {
-  padding: 3rem;
+  padding: 3rem 0;
 
   p {
     font-size: 1.9rem;
@@ -476,20 +468,27 @@ footer {
   .header {
     .headerTitle {
       left: 20%;
-      width: 50vw;
     }
+  }
 
-    footer {
-      div:nth-of-type(2) {
-        font-size: 1.5rem;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 0;
+  section {
+    padding: 5rem 8rem;
+  }
 
-        p {
-          margin: 0;
-        }
+  .contactForm {
+    width: 70%;
+    margin: 0 auto;
+  }
+
+  footer {
+    div:nth-of-type(2) {
+      font-size: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding-bottom: 0.5rem;
+      p {
+        margin: 0;
       }
     }
   }
@@ -503,7 +502,6 @@ footer {
       h1 {
         font-size: 6rem;
         white-space: nowrap;
-
         span {
           font-size: 8rem;
         }
@@ -511,10 +509,8 @@ footer {
 
       nav {
         flex-direction: row;
-
         a {
           padding-left: 1.5rem;
-
           &:hover {
             transition: color 1s ease;
           }
@@ -532,11 +528,9 @@ footer {
 
       h2 {
         font-size: 4rem;
-
         span {
           font-size: 6rem;
         }
-
         &:nth-of-type(2) {
           margin-top: 0;
         }
