--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -47,11 +47,13 @@ button {
     nav {
       display: flex;
       flex-direction: column;
+
       a {
         font-size: 2.5rem;
         color: $fontGrey;
         text-decoration: none;
         padding-left: 0.5rem;
+
         &:hover {
           color: $fontPink;
           transition: color 1s ease;
@@ -214,7 +216,7 @@ button {
 }
 
 section {
-  padding: 5rem 5rem;
+  padding: 5rem 3rem;
 }
 
 #about {
@@ -227,13 +229,12 @@ section {
 h3 {
   font-size: 2.5rem;
   font-weight: bold;
-  margin-left: 1.5rem;
 }
 
 h4 {
   font-size: 2.2rem;
   font-weight: bold;
-  margin: 0.5rem 0 2rem 1.5rem;
+  margin: 0.5rem 0 2rem 0;
 }
 
 .recommendations {
@@ -341,6 +342,10 @@ button {
   justify-content: center;
   flex-direction: column;
   text-align: center;
+
+  img {
+    width: 10rem;
+  }
 
   img:nth-of-type(1) {
     margin: 2rem 0;
@@ -487,6 +492,7 @@ footer {
       flex-direction: column;
       text-align: center;
       padding-bottom: 0.5rem;
+
       p {
         margin: 0;
       }
@@ -502,6 +508,7 @@ footer {
       h1 {
         font-size: 6rem;
         white-space: nowrap;
+
         span {
           font-size: 8rem;
         }
@@ -509,8 +516,10 @@ footer {
 
       nav {
         flex-direction: row;
+
         a {
           padding-left: 1.5rem;
+
           &:hover {
             transition: color 1s ease;
           }
@@ -528,9 +537,11 @@ footer {
 
       h2 {
         font-size: 4rem;
+
         span {
           font-size: 6rem;
         }
+
         &:nth-of-type(2) {
           margin-top: 0;
         }
