--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,15 @@ button {
   font-size: 2rem;
   font-family: $fontComfortaa;
   text-align: left;
+
+  h3,
+  h4 {
+    font-size: 2.5rem;
+    font-weight: bold;
+  }
+  h4 {
+    font-size: 2rem;
+  }
 }
 
 // Smart Phone
@@ -104,51 +113,39 @@ button {
     p:nth-of-type(1) {
       animation-delay: 0s;
     }
-
     p:nth-of-type(2) {
       animation-delay: 0.1s;
     }
-
     p:nth-of-type(3) {
       animation-delay: 0.2s;
     }
-
     p:nth-of-type(4) {
       animation-delay: 0.3s;
     }
-
     p:nth-of-type(5) {
       animation-delay: 0.4s;
     }
-
     p:nth-of-type(6) {
       animation-delay: 0.5s;
     }
-
     p:nth-of-type(7) {
       animation-delay: 0.6s;
     }
-
     p:nth-of-type(8) {
       animation-delay: 0.7s;
     }
-
     p:nth-of-type(9) {
       animation-delay: 0.8s;
     }
-
     p:nth-of-type(10) {
       animation-delay: 0.9s;
     }
-
     p:nth-of-type(11) {
       animation-delay: 1s;
     }
-
     p:nth-of-type(12) {
       animation-delay: 1.1s;
     }
-
     p:nth-of-type(13) {
       animation-delay: 1.2s;
     }
@@ -157,47 +154,36 @@ button {
       0% {
         opacity: 0;
       }
-
       .5% {
         color: #6d6d6d;
       }
-
       10% {
         color: #606060;
       }
-
       20% {
         color: #565656;
       }
-
       30% {
         color: #4b4a4a;
       }
-
       35% {
         color: #3b3b3b;
       }
-
       50% {
         color: $fontGrey;
       }
-
       65% {
         color: #3b3b3b;
       }
-
       70% {
         color: #4b4a4a;
       }
-
       80% {
         color: #565656;
       }
-
       90% {
         color: #6d6d6d;
       }
-
       100% {
         color: #b9b9b97b;
       }
@@ -226,15 +212,45 @@ section {
   }
 }
 
-h3 {
-  font-size: 2.5rem;
-  font-weight: bold;
+.profileTitle {
+  h4 {
+    font-size: 2.1rem;
+    font-weight: bold;
+  }
+
+  p {
+    font-size: 1.8rem;
+    font-style: italic;
+  }
 }
 
-h4 {
-  font-size: 2.2rem;
-  font-weight: bold;
-  margin: 0.5rem 0 2rem 0;
+.profileTitle {
+  display: flex;
+  flex-direction: column;
+
+  h4:nth-of-type(1) {
+    margin: 1rem 0 0.5rem;
+  }
+
+  h4:nth-of-type(2) {
+    display: none;
+  }
+
+  h4:nth-of-type(3) {
+    margin-bottom: 2rem;
+  }
+
+  p:nth-of-type(1) {
+    margin: 0.5rem 0 0;
+  }
+
+  p:nth-of-type(2) {
+    display: none;
+  }
+
+  p:nth-of-type(3) {
+    margin-bottom: 2rem;
+  }
 }
 
 .recommendations {
@@ -480,6 +496,31 @@ footer {
     padding: 5rem 8rem;
   }
 
+  .profileTitle div {
+    &:nth-of-type(1) {
+      margin-top: 1rem;
+    }
+    &:nth-of-type(2) {
+      margin: 0.5rem 0 1rem;
+    }
+    &:nth-of-type(1),
+    &:nth-of-type(2) {
+      display: flex;
+      flex-direction: row;
+    }
+    h4:nth-of-type(1),
+    h4:nth-of-type(3),
+    p:nth-of-type(1),
+    p:nth-of-type(3) {
+      margin: 0;
+    }
+    h4:nth-of-type(2),
+    p:nth-of-type(2) {
+      display: flex;
+      margin: 0 0.5rem;
+    }
+  }
+
   .contactForm {
     width: 70%;
     margin: 0 auto;
@@ -560,22 +601,47 @@ footer {
     padding: 5rem 10rem;
   }
 
-  .contactForm {
-    width: 50%;
-    margin: 0 auto;
-  }
-
-  footer {
-    div:nth-of-type(2) {
-      font-size: 1.8rem;
+  .profileTitle div {
+    &:nth-of-type(1) {
+      margin-top: 1rem;
+    }
+    &:nth-of-type(2) {
+      margin: 0.5rem 0 1rem;
+    }
+    &:nth-of-type(1),
+    &:nth-of-type(2) {
       display: flex;
       flex-direction: row;
-      justify-content: right;
-      padding-bottom: 0;
     }
+    h4:nth-of-type(1),
+    h4:nth-of-type(3),
+    p:nth-of-type(1),
+    p:nth-of-type(3) {
+      margin: 0;
+    }
+    h4:nth-of-type(2),
+    p:nth-of-type(2) {
+      display: flex;
+      margin: 0 0.5rem;
+    }
+  }
+}
 
-    p {
-      margin: 0.8rem;
-    }
+.contactForm {
+  width: 50%;
+  margin: 0 auto;
+}
+
+footer {
+  div:nth-of-type(2) {
+    font-size: 1.8rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    padding-bottom: 0;
+  }
+
+  p {
+    margin: 0.8rem;
   }
 }
