--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -383,6 +383,7 @@ button {
 .contactForm {
   display: flex;
   flex-direction: column;
+  // width: 100%;
 }
 
 #contact a,
@@ -450,10 +451,7 @@ footer {
       }
     }
   }
-}
 
-// Smart Phone
-@media only screen and (min-width: 576px) and (max-width: 767px) {
   footer {
     div:nth-of-type(2) {
       font-size: 1.5rem;
@@ -561,52 +559,52 @@ footer {
   section {
     padding: 5rem 10rem;
   }
-}
 
-.contactForm {
-  width: 50%;
-  margin: 0 auto;
-}
-
-footer {
-  div:nth-of-type(2) {
-    font-size: 1.8rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: right;
-    padding-bottom: 0;
+  .contactForm {
+    width: 45%;
+    margin: 0 auto;
   }
-
-  p {
-    margin: 0.8rem;
-  }
-}
-
-// Tablet and Desktop
-@media only screen and (min-width: 768px) and (max-width: 1023px),
-  only screen and (min-width: 1024px) {
-  .profileTitle div {
-    &:nth-of-type(1) {
-      margin-top: 1rem;
-    }
-    &:nth-of-type(2) {
-      margin: 0.5rem 0 1rem;
-    }
-    &:nth-of-type(1),
-    &:nth-of-type(2) {
+  
+  footer {
+    div:nth-of-type(2) {
+      font-size: 1.8rem;
       display: flex;
       flex-direction: row;
+      justify-content: right;
+      padding-bottom: 0;
     }
-    h4:nth-of-type(1),
-    h4:nth-of-type(3),
-    p:nth-of-type(1),
-    p:nth-of-type(3) {
-      margin: 0;
-    }
-    h4:nth-of-type(2),
-    p:nth-of-type(2) {
-      display: flex;
-      margin: 0 0.5rem;
+
+    p {
+      margin: 0.8rem;
     }
   }
 }
+
+    // Tablet and Desktop
+    @media only screen and (min-width: 768px) and (max-width: 1023px),
+      only screen and (min-width: 1024px) {
+      .profileTitle div {
+        &:nth-of-type(1) {
+          margin-top: 1rem;
+        }
+        &:nth-of-type(2) {
+          margin: 0.5rem 0 1rem;
+        }
+        &:nth-of-type(1),
+        &:nth-of-type(2) {
+          display: flex;
+          flex-direction: row;
+        }
+        h4:nth-of-type(1),
+        h4:nth-of-type(3),
+        p:nth-of-type(1),
+        p:nth-of-type(3) {
+          margin: 0;
+        }
+        h4:nth-of-type(2),
+        p:nth-of-type(2) {
+          display: flex;
+          margin: 0 0.5rem;
+        }
+      }
+    }
